FIX overflow vertical scroll

--- a/homepage-media/homepage.css
+++ b/homepage-media/homepage.css
@@ -17,6 +17,7 @@
 
 html {
     min-width: 1400px;
+    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
